[RW-31] Fix spacing between sections on river pages

--- a/html/themes/custom/common_design_subtheme/components/rw-river/rw-river-results.css
+++ b/html/themes/custom/common_design_subtheme/components/rw-river/rw-river-results.css
@@ -3,8 +3,11 @@
  */
 .rw-river-results {
   width: 100%;
-  /* padding: 24px 0 0; */
+  padding: 24px 0 0;
   text-align: center;
+}
+.rw-river-results--with-advanced-search {
+  padding: 0;
 }
 .rw-river-results span {
   font-weight: bold;
